--- a/TODO.txt
+++ b/TODO.txt
@@ -10,9 +10,9 @@
 - Add packers (any others are welcome too):
     * JS 4:1 packer by Frank Force
     * regpack
-    * Python 2:1
 - Add auto-fixer option
+- Add icon link to github repo
+- Add icon link to mengersponge.website
 
 BUGS:
 - JS base 2^20 and unicode can occasionally give wrong results
-- Fix HTML injection
